fix: objects color in dark mode

--- a/css/feature.css
+++ b/css/feature.css
@@ -65,18 +65,6 @@
   --w-1000: "wght" 1000;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --primary: #eb593a;
-    --primary-rgb: 235, 89, 58;
-    --border: #ffffff56;
-    --white: #fff;
-    --white-rgb: 255, 255, 255;
-    --black: #000;
-    --black-rgb: 0, 0, 0;
-  }
-}
-
 *,
 :after,
 :before {
@@ -118,8 +106,8 @@ body {
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  -webkit-color-scheme: light;
-  color-scheme: light;
+  -webkit-color-scheme: dark light;
+  color-scheme: dark light;
 }
 
 a {
